--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,18 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+# Ignore Mac system files
+.DS_store
+
+# Ignore node_modules folder
+node_modules
+
+# Ignore all text files
+*.txt
+
+# Ignore files related to API keys
+.env
+
+# Ignore SASS config files
+.sass-cache
